--- a/index.html
+++ b/index.html
@@ -1,110 +1,13 @@
 <html>
 <head>
     <link href="app.css" rel="stylesheet">
-    <script src="myword.js" language="javascript"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script src="react-myword.js" type="text/babel"></script>
 </head>
 <body>
-    <div class="table" id="round1Display">
-        <div class="row" id="round0row0">
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row1">
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row2">
-            <div class="cell unused"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row3">
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row4">
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row5">
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row6">
-            <div class="cell unused"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row7">
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row8">
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell unused"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row9">
-            <div class="cell unused"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell score"></div>
-        </div>
-        <div class="row" id="round0row10">
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell letter"></div>
-            <div class="cell score"></div>
-        </div>
-    </div>
+    <div id="main-container"></div>
     <span id="scoreDisplay"></span>
 </body>
 </html>
