--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="react-myword.js" type="text/babel"></script>
+    <script>
+        if('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('sw.js');
+        };
+    </script>
 </head>
 <body>
     <div id="main-container"></div>
