switch to grid layout in poc

--- a/myword.html
+++ b/myword.html
@@ -6,172 +6,150 @@
     <div class="game-wrapper"> 
         <div class="board">   
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells"> 
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells"> 
                     <div class="board_row_background"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                    <div class="board_row_guess"><p>T</p></div>
+                    <div class="board_row_guess"><p>I</p></div>
+                    <div class="board_row_guess"><p>M</p></div>
+                    <div class="board_row_guess"><p>E</p></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_background"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
             <div class="board__row">
-                <div class="board__row_cells">
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
                     <div class="board_row_guess"></div>
-                </div>
-                <div class="board__row_score">
-                </div>
+                    <div class="board__row_score">
+                    </div>
             </div>
         </div>
         <div class="keyboard">
             <div class="keyboard__row"> 
-                <div class="keyboard__row__key">Q</div>
-                <div class="keyboard__row__key">W</div>
-                <div class="keyboard__row__key">E</div>
-                <div class="keyboard__row__key">R</div>
-                <div class="keyboard__row__key">T</div>
-                <div class="keyboard__row__key">Y</div>
-                <div class="keyboard__row__key">U</div>
-                <div class="keyboard__row__key">I</div>
-                <div class="keyboard__row__key">O</div>
-                <div class="keyboard__row__key">P</div>
+                <button class="keyboard__row__key">Q</button>
+                <button class="keyboard__row__key">W</button>
+                <button class="keyboard__row__key">E</button>
+                <button class="keyboard__row__key">R</button>
+                <button class="keyboard__row__key">T</button>
+                <button class="keyboard__row__key">Y</button>
+                <button class="keyboard__row__key">U</button>
+                <button class="keyboard__row__key">I</button>
+                <button class="keyboard__row__key">O</button>
+                <button class="keyboard__row__key">P</button>
             </div>
             <div class="keyboard__row">
-                <div class="keyboard__row__key">A</div>
-                <div class="keyboard__row__key">S</div>
-                <div class="keyboard__row__key">D</div>
-                <div class="keyboard__row__key">F</div>
-                <div class="keyboard__row__key">G</div>
-                <div class="keyboard__row__key">H</div>
-                <div class="keyboard__row__key">J</div>
-                <div class="keyboard__row__key">K</div>
-                <div class="keyboard__row__key">L</div>
+                <button class="keyboard__row__key">A</button>
+                <button class="keyboard__row__key">S</button>
+                <button class="keyboard__row__key">D</button>
+                <button class="keyboard__row__key">F</button>
+                <button class="keyboard__row__key">G</button>
+                <button class="keyboard__row__key">H</button>
+                <button class="keyboard__row__key">J</button>
+                <button class="keyboard__row__key">K</button>
+                <button class="keyboard__row__key">L</button>
             </div>
             <div class="keyboard__row">
-                <div class="keyboard__row__key">Enter</div>
-                <div class="keyboard__row__key">Z</div>
-                <div class="keyboard__row__key">X</div>
-                <div class="keyboard__row__key">C</div>
-                <div class="keyboard__row__key">V</div>
-                <div class="keyboard__row__key">B</div>
-                <div class="keyboard__row__key">N</div>
-                <div class="keyboard__row__key">M</div>
-                <div class="keyboard__row__key">Back</div>
+                <button class="keyboard__row__key">Enter</button>
+                <button class="keyboard__row__key">Z</button>
+                <button class="keyboard__row__key">X</button>
+                <button class="keyboard__row__key">C</button>
+                <button class="keyboard__row__key">V</button>
+                <button class="keyboard__row__key">B</button>
+                <button class="keyboard__row__key">N</button>
+                <button class="keyboard__row__key">M</button>
+                <button class="keyboard__row__key">Back</button>
             </div>
             <div class="keyboard__row">
             </div>
