initial static layout using components

--- a/myword.html
+++ b/myword.html
@@ -1,117 +1,143 @@
-<html>
-<head>
-<link rel="stylesheet" href="app.css"/>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>What's My Word</title>
+    <link rel="stylesheet" href="app.css"/>
 </head>
 <body>
+    <div id="root">
     <div class="game-wrapper"> 
         <div class="board">   
             <div class="board__row">
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                <div class="board__row_cells">
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                <div class="board__row_cells">
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
+                <div class="board__row_cells">
                     <div class="board_row_background"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
+                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
+                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
+                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
+                <div class="board__row_cells">
                     <div class="board_row_background"></div>
                     <div class="board_row_guess"><p>T</p></div>
                     <div class="board_row_guess"><p>I</p></div>
                     <div class="board_row_guess"><p>M</p></div>
                     <div class="board_row_guess"><p>E</p></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                <div class="board__row_cells">
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
                     <div class="board_row_background"></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                <div class="board__row_cells">
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
                     <div class="board_row_background"></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
+                <div class="board__row_cells">
                     <div class="board_row_background"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
             <div class="board__row">
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
-                    <div class="board_row_guess"></div>
+                <div class="board__row_cells">
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                    <div class="board_row_guess"><p></p></div>
+                </div>
                     <div class="board__row_score">
                     </div>
             </div>
@@ -154,6 +180,7 @@
             <div class="keyboard__row">
             </div>
         </div>
+    </div>
     </div>
 </body>
 </html>
