hook up random word and end game modal

--- a/myword.html
+++ b/myword.html
@@ -8,6 +8,9 @@
 <body>
     <div id="root">
     <div class="game-wrapper"> 
+        <div class="end_game_modal_backdrop">
+            <div class="end_game_modal"><h2>The word was {props.answer}.  You scored {props.score}!</h2></div>
+        </div>
         <div class="board">   
             <div class="board__row">
                 <div class="board__row_cells">
